--- a/cars2.html
+++ b/cars2.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-    <title>Playing with the DOM</title>
+    <title>Cars</title>
 </head>
 
 <body>
-
-    <h1 id="heading">Hello world</h1>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-    <script src="myAnimation.js"></script>
+    <script src="cars2.js"></script>
 </body>
 
 </html>
