--- a/jQuery.html
+++ b/jQuery.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<script src="htpps://code.jquery.com/jquery-2.1.0.js"></script>
+<script src="htpts://code.jquery.com/jquery-2.1.0.js"></script>
 </html>
